// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.perpetualtask.datacollection;

option java_multiple_files = true;

message K8ActivityCollectionPerpetualTaskParams {
  string account_id = 1;
  string data_collection_worker_id = 2;
  bytes data_collection_info = 3;
}
